# teeth-overlord

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  dev-requirements.txt  endopint_main.py  endpoint_main.py  main.py  requirements.txt  setup.cfg  ship.py  sync_models.py  test-requirements.txt  tox.ini
carbide_overlord/: config.py  errors.py  models.py  scheduler.py  service.py  settings.json  stats.py
carbide_overlord/agent_client/: __init__.py  fake.py  rest.py
carbide_overlord/api/: agent.py  public.py
carbide_overlord/cmd/: agent_api.py  job_executor.py  prepare_dev_environment.py  public_api.py  sync_models.py
carbide_overlord/images/: base.py  fake.py
carbide_overlord/jobs/: base.py  chassis.py  instances.py
carbide_overlord/oob/: base.py  fake.py  ipmitool.py
carbide_overlord/tests/: __init__.py
carbide_overlord/tests/unit/: agent_client.py  config.py  locks.py  mocks.py  scheduler.py  stats.py
carbide_overlord/tests/unit/api/: agent.py  base.py  chassis.py  chassis_model.py  flavor.py  flavor_provider.py  instance.py
carbide_overlord/tests/unit/jobs/: base.py  instances.py
carbide_overlord/tests/unit/oob/: ipmitool.py
images/cassandra/: Dockerfile
images/overlord_base/: Dockerfile  requirements.txt
scripts/: bootstrap-virtualenv.sh  jenkins.sh  prepare_test_env.py  sync_models.py
teeth/overlord/: agent_endpoint.py  config.py  errors.py  jobs.py  models.py  rest.py
teeth/overlord/agent/: endpoint.py  rpc.py
teeth/overlord/api/: server.py
teeth_overlord/: agent_client.py  config.py  configdrive.py  dbops.py  encoding.py  errors.py  ipmi.py  jobs.py  locks.py  marconi.py  models.py  rest.py  scheduler.py  service.py  settings.json  settings.py  stats.py  util.py
teeth_overlord/agent/: endpoint.py  rpc.py
teeth_overlord/agent_client/: __init__.py  base.py  fake.py  rest.py
teeth_overlord/api/: agent.py  base.py  public.py  server.py
teeth_overlord/cmd/: agent_api.py  job_executor.py  prepare_dev_environment.py  public_api.py  sync_models.py
teeth_overlord/config/: __init__.py  sources.py
teeth_overlord/images/: base.py  fake.py  glance.py  static.py
teeth_overlord/jobs/: base.py  chassis.py  instances.py
teeth_overlord/networks/: base.py  fake.py  neutron.py
teeth_overlord/oob/: base.py  fake.py  ipmitool.py
teeth_overlord/tests/: __init__.py
teeth_overlord/tests/api/: public.py
teeth_overlord/tests/unit/: agent_client.py  api_public.py  configdrive.py  dbops.py  locks.py  mocks.py  scheduler.py  service.py  stats.py  util.py
teeth_overlord/tests/unit/api/: agent.py  base.py  chassis.py  chassis_model.py  flavor.py  flavor_provider.py  instance.py
teeth_overlord/tests/unit/images/: glance.py
teeth_overlord/tests/unit/jobs/: base.py  instances.py
teeth_overlord/tests/unit/networks/: neutron.py
teeth_overlord/tests/unit/oob/: ipmitool.py
twisted/plugins/: agent_endpoint.py  job_executor.py  public_api.py
