[metadata]
name = teeth-overlord
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = Teeth Management System
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    teeth_overlord

[entry_points]
console_scripts =
    teeth-public-api = teeth_overlord.cmd.public_api:run
    teeth-job-executor = teeth_overlord.cmd.job_executor:run
    teeth-prepare-dev-environment = teeth_overlord.cmd.prepare_dev_environment:run
    teeth-sync-models = teeth_overlord.cmd.sync_models:run

teeth_overlord.image.providers =
    fake = teeth_overlord.images.fake:FakeImageProvider

teeth_overlord.agent.clients =
    rest = teeth_overlord.agent_client.rest:RESTAgentClient
    fake = teeth_overlord.agent_client.fake:FakeAgentClient

teeth_overlord.jobs =
    instances.create = teeth_overlord.jobs.instances:CreateInstance
    instances.delete = teeth_overlord.jobs.instances:DeleteInstance
    chassis.decommission = teeth_overlord.jobs.chassis:DecommissionChassis

teeth_overlord.out_of_band.providers =
    fake = teeth_overlord.oob.fake:FakeOutOfBandProvider
    ipmitool = teeth_overlord.oob.ipmitool:IPMIToolProvider
