[metadata]
name = carbide-overlord
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = Carbide Management System
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    carbide_overlord

[entry_points]
console_scripts =
    carbide-public-api = carbide_overlord.cmd.public_api:run
    carbide-agent-api = carbide_overlord.cmd.agent_api:run
    carbide-job-executor = carbide_overlord.cmd.job_executor:run
    carbide-prepare-dev-environment = carbide_overlord.cmd.prepare_dev_environment:run
    carbide-sync-models = carbide_overlord.cmd.sync_models:run

carbide_overlord.image.providers =
    fake = carbide_overlord.images.fake:FakeImageProvider

carbide_overlord.agent.clients =
    rest = carbide_overlord.agent_client.rest:RESTAgentClient
    fake = carbide_overlord.agent_client.fake:FakeAgentClient

carbide_overlord.jobs =
    instances.create = carbide_overlord.jobs.instances:CreateInstance
    instances.delete = carbide_overlord.jobs.instances:DeleteInstance
    chassis.decommission = carbide_overlord.jobs.chassis:DecommissionChassis

carbide_overlord.out_of_band.providers =
    fake = carbide_overlord.oob.fake:FakeOutOfBandProvider
    ipmitool = carbide_overlord.oob.ipmitool:IPMIToolProvider
